--- a/index.html
+++ b/index.html
@@ -10,22 +10,31 @@
 
     <section id="step12">
       <h2>Step 1 and 2</h2>
+      <button>Run Ajax Request to Root</button>
     </section>
 
     <section id="step3456">
       <h2>Step 3, 4, 5, 6</h2>
+      <p class = 'pingPong'></p>
+      <button class = 'pingPong'>Run AJAX Request to Ping/Pong</button>
     </section>
 
     <section id="step7">
       <h2>Step 7</h2>
+      <p class = 'count'></p>
+      <button class = 'count'>Run AJAX Request to Count</button>
     </section>
 
     <section id="step8">
       <h2>Step 8</h2>
+      <p class ='time'></p>
+      <button class = "time">Run AJAX Request to Time</button>
     </section>
 
     <section id="step9">
       <h2>Step 9</h2>
+      <ul class ='car'></ul>
+      <button class = "car">Run AJAX Request to A Car</button>
     </section>
 
   </body>
